# Parallel_Programming_CUDA

./: CMakeLists.txt  GPUConvolution.cu  GPUConvolution.cuh  Image.cu  Image.cuh  README.md  SequentialConvolution.cu  SequentialConvolution.cuh  main.cu
results/: Convolution_results.txt
